<resources>
    <!-- Названия для Toolbar-->
    <string name="app_name">Playlist Maker</string>
    <string name="settings">Настройки</string>

    <!--Названия кнопок на MainActivity-->
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>

    <!--Названия функций на SettingsActivity-->
    <string name="dark_theme">Темная тема</string>
    <string name="app_share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <!--Сообщения об ошибке-->
    <string name="browser_not_found">Браузер не найден</string>

    <!--Текст для писем-->
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <!--URL-->
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="course_link">https://practicum.yandex.ru/profile/android-developer-plus/</string>

    <!--TrackListText-->
    <string name="track_name">Track Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="track_time">3:45</string>
    <string name="collection">Collection Name</string>
    <string name="release_date_year">1965</string>
    <string name="genre">Rock</string>
    <string name="country_name">Великобритания</string>
    <string name="progress_time">3:45</string>



    <!--PlaceholderText-->
    <string name="no_results_text">Ничего не нашлось</string>
    <string name="retry_button_text">Обновить</string>
    <string name="network_error_text">Проблемы со связью\n\nЗагрузка не удалась.Проверьте\nподключение к интернету</string>

    <!--Historysearch-->
    <string name="search_history">Вы искали</string>
    <string name="clean_history">Очистить историю</string>

    <!--Content description-->
    <string name="button_back">Кнопка назад</string>
    <string name="add_to_playlist">Добавить в плэйлист</string>

    <!--Track description-->
    <string name="collection_name">Альбом</string>
    <string name="track_time_millis">Длительность</string>
    <string name="release_date">Год</string>
    <string name="primary_genre_name">Жанр</string>
    <string name="play_pause_button">Кнопка play/pause</string>
    <string name="favorites">Добавить в избранное</string>
    <string name="country">Cтрана</string>
    <string name="cover_image">Обложка</string>




</resources>