<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        app:titleTextColor="@color/white"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolbarTitleStyle"/>

    <Button
        android:id="@+id/search_button"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/search"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/library_button"
        android:layout_marginTop="16dp"
        android:text="@string/library"
        app:icon="@drawable/library"
        style="@style/ButtonStyle"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/settings"
        app:icon="@drawable/settings"
        style="@style/ButtonStyle"/>

</LinearLayout>
