<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <!-- Кнопка "Назад" -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:contentDescription="@string/button_back"
        app:layout_constraintStart_toStartOf="@id/coverImage"
        app:layout_constraintEnd_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow" />

    <!-- Обложка альбома -->

    <ImageView
        android:id="@+id/coverImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/cover_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline" />

    <!-- Название трека -->
    <TextView
        android:id="@+id/trackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/track_name"
        android:textAppearance="@style/trackNameTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/artistName"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/coverImage" />


    <!-- Имя исполнителя -->
    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/artist_name"
        android:textAppearance="@style/trackArtistNameTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/addToPlaylistButton"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/trackName" />

    <!-- Время трека -->

    <TextView
        android:id="@+id/trackTimeMillisDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="54dp"
        android:text="@string/track_time_millis"
        android:textAppearance="@style/trackDescriptionTittleTextStyle"
        app:layout_constraintBottom_toTopOf="@+id/collectionNameDescription"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/addToPlaylistButton" />

    <TextView
        android:id="@+id/trackTimeMillis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="54dp"
        android:textAppearance="@style/trackDescriptionTextStyle"
        android:text="@string/track_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/trackTimeMillisDescription"
        app:layout_constraintBottom_toTopOf="@+id/collectionNameDescription"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/addToPlaylistButton" />

    <!-- Название альбома (если есть) -->
    <TextView
        android:id="@+id/collectionNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/trackDescriptionTittleTextStyle"
        android:text="@string/collection_name"
        app:layout_constraintBottom_toTopOf="@+id/releaseDateDescription"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/trackTimeMillisDescription" />

    <TextView
        android:id="@+id/collectionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/trackDescriptionTextStyle"
        android:text="@string/collection"
        app:layout_constraintBaseline_toBaselineOf="@+id/collectionNameDescription"
        app:layout_constraintBottom_toTopOf="@+id/releaseDateDescription"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/trackTimeMillisDescription" />

    <!-- Год релиза -->
    <TextView
        android:id="@+id/releaseDateDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/trackDescriptionTittleTextStyle"
        android:text="@string/release_date"
        app:layout_constraintBottom_toTopOf="@+id/primaryGenreNameDescription"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/collectionNameDescription" />

    <TextView
        android:id="@+id/releaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/trackDescriptionTextStyle"
        android:text="@string/release_date_year"
        app:layout_constraintBaseline_toBaselineOf="@+id/releaseDateDescription"
        app:layout_constraintBottom_toTopOf="@+id/primaryGenreNameDescription"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/collectionNameDescription" />

    <!-- Жанр -->
    <TextView
        android:id="@+id/primaryGenreNameDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/trackDescriptionTittleTextStyle"
        android:text="@string/primary_genre_name"
        app:layout_constraintBottom_toTopOf="@+id/countryDescription"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/releaseDateDescription" />

    <TextView
        android:id="@+id/primaryGenreName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/trackDescriptionTextStyle"
        android:text="@string/genre"
        app:layout_constraintBaseline_toBaselineOf="@+id/primaryGenreNameDescription"
        app:layout_constraintBottom_toTopOf="@+id/countryDescription"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/releaseDateDescription" />

    <!-- Страна исполнителя -->
    <TextView
        android:id="@+id/countryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/trackDescriptionTittleTextStyle"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/primaryGenreNameDescription" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/trackDescriptionTextStyle"
        android:text="@string/country_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/countryDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/primaryGenreNameDescription" />

    <!-- Кнопка для управления воспроизведением (Play/Pause) -->
    <ImageButton
        android:id="@+id/addToPlaylistButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/button_round"
        android:src="@drawable/button_add"
        android:contentDescription="@string/add_to_playlist"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/playPauseButton"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <ImageButton
        android:id="@+id/playPauseButton"
        android:layout_width="84dp"
        android:layout_height="84dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/button_round"
        android:src="@drawable/button_play"
        android:contentDescription="@string/play_pause_button"
        app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
        app:layout_constraintEnd_toStartOf="@+id/addToFavoritesButton"
        app:layout_constraintTop_toBottomOf="@+id/artistName" />

    <ImageButton
        android:id="@+id/addToFavoritesButton"
        android:layout_width="51dp"
        android:layout_height="51dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/button_round"
        android:src="@drawable/button_favourite"
        android:contentDescription="@string/favorites"
        app:layout_constraintStart_toEndOf="@id/playPauseButton"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/artistName" />

    <!-- Прогресс воспроизведения) -->
    <TextView
        android:id="@+id/timeProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:textAppearance="@style/trackDescriptionTextStyle"
        android:text="@string/progress_time"
        app:layout_constraintBottom_toTopOf="@+id/trackTimeMillisDescription"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toBottomOf="@+id/playPauseButton" />


</androidx.constraintlayout.widget.ConstraintLayout>