<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp"
    app:cardBackgroundColor="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@android:color/transparent">

        <ImageView
            android:id="@+id/trackImage"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="4dp"
            android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                style="@style/TrackNameStyle"
                android:id="@+id/trackName"
                android:text="@string/track_name"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/ArtistAndTimeTextStyle"
                    android:id="@+id/artistName"
                    android:text="@string/artist_name"
                    android:maxLines="1"
                    android:ellipsize="end"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/iconBetweenArtistAndTime"
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    app:srcCompat="@drawable/ic_ellipse_1"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:layout_marginStart="0dp"
                    app:layout_constraintStart_toEndOf="@id/artistName"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    style="@style/ArtistAndTimeTextStyle"
                    android:id="@+id/trackTime"
                    android:text="@string/track_time"
                    android:layout_marginStart="0dp"
                    app:layout_constraintStart_toEndOf="@id/iconBetweenArtistAndTime"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
        <ImageView
            android:id="@+id/arrowIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow_forward"
            android:layout_marginStart="4dp"
            android:scaleType="fitCenter"/>
        </LinearLayout>
</androidx.cardview.widget.CardView>